tests/miniJava/neg/006809_mutation.MiniJava
class length { public static void Main ( String [ ] java ) { { } } }
